--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <link rel="stylesheet" href="asset\style.css">
-    <title>Recipe Search App</title>
+    <title>Recipe Finder</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Recipe Search</h1>
-        <form id="search-form">
-            <input type="text" id="ingredient-input" placeholder="Enter ingredients..." required>
-            <div>
-                <input type="checkbox" id="diet-vegan" value="vegan">
-                <label for="diet-vegan">Vegan</label>
-                <input type="checkbox" id="diet-vegetarian" value="vegetarian">
-                <label for="diet-vegetarian">Vegetarian</label>
-                <!-- Add more checkboxes as needed -->
-            </div>
-            <button type="submit" class="btn btn-primary">Search</button>
-        </form>
-        <h2>Favourites</h2>
-        <div id="favorites"></div>
-        <h2>Search Results</h2>
-        <div id="recipes"></div>
-        <div id="spinner" style="display: none;">
-            <div class="spinner-border" role="status">
-                <span class="sr-only">Loading...</span>
+        <div id="welcome-section" class="jumbotron text-center">
+            <h1 class="display-4">Welcome to Recipe Finder</h1>
+            <p class="lead">Enter ingredients to find a recipe you will love!</p>
+        </div>
+        <div class="input-group mb-3">
+            <input type="text" id="ingredient-input" class="form-control" placeholder="Enter ingredients...">
+            <div class="input-group-append">
+                <button id="search-button" class="btn btn-outline-secondary">Search</button>
             </div>
         </div>
-        <button id="prev-btn" class="btn btn-primary">Previous</button>
-        <button id="next-btn" class="btn btn-primary">Next</button>
+        <div id="recipe-list" class="row mt-4"></div>
+        <div id="recipe-details" class="card mt-4" style="display: none;">
+            <img id="recipe-image" class="card-img-top" alt="Recipe image">
+            <div class="card-body">
+                <h5 id="recipe-title" class="card-title"></h5>
+                <p id="recipe-instructions" class="card-text"></p>
+                <h3>About the origin</h3>
+                <p id="recipe-country-details"></p>
+            </div>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="asset\index.js"></script>
 </body>
-</html>
